--- a/less/global.less
+++ b/less/global.less
@@ -14,6 +14,10 @@ html, body {
     overflow-x: hidden;
     //This is to allow 100% screen width border above heading image
   }
+  @media @tablet {
+    overflow-x: hidden;
+    //This is to allow 100% screen width border above heading image
+  }
 }
 
 h1, h2, h3, h4, h5 {
